Fixed text overflow in webview

--- a/app/src/main/assets/nutristyle.css
+++ b/app/src/main/assets/nutristyle.css
@@ -18,7 +18,6 @@ body
 	/*background: linear-gradient(to bottom,  #ffffff 0%,#e5e5e5 100%); /* W3C */
 	/*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
 	padding: 10px 25px 25px 25px;
-	width: 200px
 	margin: 0;
 }
 
@@ -149,7 +148,6 @@ hr.clearall
 	font-size: 30px;
 	font-weight: bold;
 	text-align: left;
-	width: 515px;
 }
 
 .rdinfo
